--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,2 +1,31 @@
+#
+# This file is part of Intellivoid.Coffeehouse-go (https://github.com/Dank-del/Intellivoid.Coffeehouse-go).
+# Copyright (c) 2021 Sayan Biswas, ALiwoto.
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, version 3.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see <http://www.gnu.org/licenses/>.
+#
+
+
+# please ignore various formats of media for testing in mediaProcessing
+# package, thanks
 *.jpg
+*.png
+*.gif
+*.mp4
+*.m4a
+*.mp3
+*.mp2
+*.mkv
+
+# ignore all of files in nsfw directory since we don't want to get banned in github
 nsfw/
